--- a/user.html
+++ b/user.html
@@ -117,8 +117,8 @@
                                                 <th>
                                                     {{date}}
                                                 </th>
-                                                <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                <th >
+                                                    <a data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -142,7 +142,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -166,7 +166,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -190,7 +190,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间" onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -214,7 +214,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -238,7 +238,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -262,7 +262,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -286,7 +286,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -310,7 +310,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -334,7 +334,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -358,7 +358,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a  data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -382,7 +382,7 @@
                                                     {{date}}
                                                 </th>
                                                 <th>
-                                                    <a data-toggle="from" data-target="#from" onclick="exitinfo(this)" >修改</a>
+                                                    <a data-toggle="tooltip" data-placement="bottom" title="将时间修改为当前时间"  onclick="exitinfo(this)" >修改</a>
                                                     <a onclick="delinfo(this)" >删除</a>
                                                 </th>
                                             </tr>
@@ -503,7 +503,7 @@
             $('.navbar-collapse a').click(function () {
                 $('.navbar-collapse').collapse('hide');
             });
-
+            $('[data-toggle="tooltip"]').tooltip();
         });
 
     </script>
